--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
 * {
   margin: 0;
   padding: 0;
+  outline: 0;
 }
 ul {
   list-style: none;
 }
 body {
-  background-color: black;
   padding-top: 150px;
   text-align: center;
 }
@@ -15,13 +15,16 @@ body {
   width: 400px;
   display: flex;
   margin: 0 auto;
-  background-color: white;
+  background-color: black;
 }
 input {
+  margin: 0;
+  padding: 0;
   width: 220px;
   height: 100px;
   border: none;
-  background-color: transparent;
+  color: white;
+  background-color: black;
   padding-left: 25px;
 }
 .btn button {
@@ -29,18 +32,26 @@ input {
   margin-left: 15px;
   border: none;
   padding: 10px;
-  background-color: black;
-  color: white;
+  background-color: white;
+  color: black;
 }
 ul li {
-  color: red;
+  color: black;
 }
 ul button {
-  margin: 33px 0;
+  margin: 15px 0;
   margin-left: 15px;
   border: none;
   padding: 10px;
-  background-color: white;
-  color: black;
-  border-radius: 30px;
+  background-color: black;
+  color: white;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+}
+.delete {
+  color: white;
+  background-color: red;
 }
